kubernetes-dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard

  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: kubernetes-dashboard-dashboard-transport@kubernetescrd

spec:
  ingressClassName: traefik

  rules:
  - host: dashboard.local
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: kubernetes-dashboard-kong-proxy
            port:
              number: 443
